<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app_title">Quiz App</string>
    <string name="welcome_text">Welcome</string>
    <string name="enter_name_text">Please enter your name.</string>
    <string name="name_input_hint">e.g. John</string>
    <string name="start_button_text">Start</string>
    <string name="submit_btn_text">SUBMIT</string>
    <string name="quiz_image">Quiz Image</string>
</resources>